[package]
name = "rustedbytes-pi"
version = "0.1.0"
edition = "2024"
description = "Computes digits of Pi using the Chudnovsky algorithm"
authors = ["Daniele Olmisani <daniele.olmisani@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/mad4j/howlast"
homepage = "https://github.com/mad4j/howlast"
keywords = ["pi", "chudnovsky", "mathematics", "computation", "rust"]
categories = ["science", "mathematics", "algorithms"]
readme = "README.md"

[dependencies]
dashu = "0.4"
dashu-float = "0.4"
dashu-macros = "0.4"
dashu-int = "0.4.1"
dashu-base = "0.4.1"
howlast = "0.1.1"
clap = { version = "4.5.37", features = ["derive"] }
rayon = "1.10.0"
